# qunicorn-core

./: .dockerignore  .editorconfig  .flake8  .flaskenv  .gitignore  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  keycloak-docker-compose.yaml  pyproject.toml  requirements.txt  requirements_.txt  service.yaml  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-docker-to-container-rep.yml  build-rtd.yml  formatting-linting.yml  run-pytests.yml
docs/: apidocumentation.rst  architecture.rst  cli.rst  conf.py  glossary.rst  index.rst  requirements.txt  tutorial.rst
docs/adr/: 0000-user-markdown-architectural-decisions-records.md  0003-rest-decisions.md  0004-mapper.md
docs/architecture_documentation/: apidocumentation.rst  architecture.rst  authentication.rst  main_architecture.rst  project_structure.rst
docs/contribution_guidelines_documentation/: development_guidelines.rst  git_guidelines.rst  main_contribution_guidelines.rst
docs/models/: dbmodels.rst  domainmodel.rst  projectstructuremodels.rst
docs/myapi/: myapi.rst
docs/others/: disclaimer.rst  glossary.rst
docs/pilot_documentation/: aws_pilot.rst  general_pilot.rst  ibm_pilot.rst  main_pilot_documentation.rst  qmware_pilot.rst  rigetti_pilot.rst  transpilation.rst  transpile_manager.rst
docs/project_introduction/: current_functionality.rst  functionality_workflows.rst  main_introduction.rst  project_description.rst  usecases.rst
docs/source/: modules.rst  qunicorn_core.api.api_models.deployment_dtos.rst  qunicorn_core.api.api_models.device_dtos.rst  qunicorn_core.api.api_models.job_dtos.rst  qunicorn_core.api.api_models.provider_dtos.rst  qunicorn_core.api.api_models.quantum_program_dtos.rst  qunicorn_core.api.api_models.result_dtos.rst  qunicorn_core.api.api_models.root.rst  qunicorn_core.api.api_models.rst  qunicorn_core.api.deployment.deployments.rst  qunicorn_core.api.deployment.root.rst  qunicorn_core.api.deployment.rst  qunicorn_core.api.deployment_api.blueprint.rst  qunicorn_core.api.deployment_api.deployment_view.rst  qunicorn_core.api.deployment_api.rst  qunicorn_core.api.device_api.blueprint.rst  qunicorn_core.api.device_api.device_view.rst  qunicorn_core.api.device_api.rst  qunicorn_core.api.devices.devices.rst  qunicorn_core.api.devices.root.rst  qunicorn_core.api.devices.rst  qunicorn_core.api.flask_api_utils.rst  qunicorn_core.api.job_api.blueprint.rst  qunicorn_core.api.job_api.job_view.rst  qunicorn_core.api.job_api.rst  qunicorn_core.api.jobmanager.job_pilots.rst  qunicorn_core.api.jobmanager.jobs.rst  qunicorn_core.api.jobmanager.pilot_base.rst  qunicorn_core.api.jobmanager.root.rst  qunicorn_core.api.jobmanager.rst  qunicorn_core.api.jwt.rst  qunicorn_core.api.models.deployment.rst  qunicorn_core.api.models.devices.rst  qunicorn_core.api.models.jobs.rst  qunicorn_core.api.models.root.rst  qunicorn_core.api.models.rst  qunicorn_core.api.models.services.rst  qunicorn_core.api.models.users.rst  qunicorn_core.api.provider_api.blueprint.rst  qunicorn_core.api.provider_api.provider_view.rst  (+77 more)
docs/tutorials/: configure_pycharm.rst  docker.rst  getting_started.rst  helm_charts_deplyment.rst  kubernetes.rst  linting_formatting.rst  main_tutorials.rst  pilot_tutorial.rst  pilot_tutorial_demo.rst  rtd_setup_testing.rst  testing.rst  useful_commands.rst
migrations/: env.py
migrations/versions/: 10775e5e3f9a_circuit_cutting.py  26f038113f80_add_error_mitigation.py  3a3f8c2e7096_add_transient_job_state.py  7fe9c959db45_qprov.py  87eefd9a127c_initial_migration.py  9aac847198b4_error_mitigation.py  a3d1af905d3e_consistent_result_format.py  bb46de4107af_persistent_transpilation_cache.py
minikube/: README.md  broker-deployment.yaml  broker-service.yaml  configmap.yaml  keycloak-claim0-persistentvolumeclaim.yaml  keycloak-database.yaml  keycloak-deployment.yaml  keycloak-postgres-deployment.yaml  keycloak-postgres.yaml  keycloak-service.yaml  keycloak.yaml  postgres-deployment.yaml  postgres-service.yaml  server-deployment.yaml  server-ingress.yaml  server-service.yaml  server-tcp-service.yaml  worker-deployment.yaml  worker-service.yaml
qunicorn_core/: __init__.py  celery.py  celery_worker.py  licenses.py
qunicorn_core/api/: __init__.py  flask_api_utils.py  jwt.py  util.py
qunicorn_core/core/: __init__.py  circuit_cutting_service.py  deployment_service.py  device_service.py  devicemanager_service.py  job_manager_service.py  job_service.py  jobmanager_service.py  provider_service.py  providermanager_service.py  user_service.py
qunicorn_core/db/: __init__.py  cli.py  db.py  qunicorn_devices.json
qunicorn_core/static/: qunicorn_exception.py
qunicorn_core/templates/: licenses.html
qunicorn_core/util/: __init__.py  logging.py  reverse_proxy_fix.py  utils.py
resources/: keycloak-realm-export.json
tests/: README.md  __init__.py  conftest.py  job_request_dto_test_data.json  job_test_data.json  job_test_data_sampler.json  qunicorn_test_db  test_config.py  test_jobmanager.py  test_utils.py
tests/automated_tests/: __init__.py  conftest.py  domain model.drawio  test_aws_job_execution.py  test_circuit_transpiler.py  test_deployments.py  test_dummy.py  test_ibm_estimator.py  test_ibm_job_execution.py  test_ibm_sampler.py  test_in_request_execution_aws.py  test_jobmanager.py  test_jobmanager_ibm.py  test_multiple_gates.py  test_pilots_default_data.py  test_provider_and_devices.py  test_qmware_pilot.py  test_various_language_job_execution.py
tests/manual_tests/: __init__.py  test_device_actions.py  test_high_load_with_postman.py  test_ibm_job_errors.py  test_ibm_job_execution.py  test_job_canceling.py  test_job_errors.py  test_jobmanager.py  test_jobmanager_with_ibm.py  test_rigetti_job_execution.py
tests/test_resources/: Qunicorn_High_Load_Test.postman_collection.json  deployment_request_dto_braket_test_data.json  deployment_request_dto_multiple_gates_test_data.json  deployment_request_dto_qasm3_test_data.json  deployment_request_dto_qiskit_test_data.json  job_request_dto_aws_test_data.json  (+17 more)
(+167 files in other folders)
