[tool.poetry]
authors = ["Arne Bartenbach", "Gabriel Bonnet", "Daniel Georg", "Nora Hengst", "Lukas Januschke", "Maximilian Kuhn",
    "Fadil Furkan Lokman", "Julian Obst", "Christoph Walcher", "Vladimir Yussupov"]
description = "Qunicorn Core for SeQuenC"
license = "Apache-2.0"
name = "qunicorn_core"
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.4.4"
Flask-Migrate = "^4.0.4"
Flask-SQLAlchemy = "^3.0.3"
SQLAlchemy = "^2.0.4"
flask = { extras = ["dotenv"], version = "^2.2.3" }
flask-babel = "^3.0.0"
flask-smorest = "^0.40.0"
python = ">=3.11.0, <3.13"
tomli = "^2.0.0"
celery = "^5.2.7"
redis = "^4.5.4"
qiskit = "^0.44.0"
qiskit-ibm-provider = "^0.7.2"
qiskit-ibm-runtime = "^0.13.0"
PyYAML = "^6.0"
mocker = "^1.1.1"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.6"
amazon-braket-sdk = "^1.49.1"
invoke = "^2.0.0"
py-automapper = "^1.2.3"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-qthelp = "^1.0.6"
sphinxcontrib-applehelp = "^1.0.7"
sphinxcontrib-devhelp = "^1.0.5"
sphinxcontrib-htmlhelp = "^2.0.4"
sphinxcontrib-jquery = "^4.1"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-redoc = "^1.6.0"
sphinxcontrib-serializinghtml = "^1.1.9"
sphinx-click = "^5.0.1"
sphinx = "^7.2.2"
myst-parser = "^2.0.0"
pytest = "^7.2.0"
pytest-mock = "^3.11.1"
qiskit-aer = "^0.13.0"
qiskit-qasm3-import = "^0.3.0"
graphviz = "^0.20.1"
pydot = "^1.4.2"
pillow = "^10.0.1"
scipy = "^1.11.3"
qrisp = "^0.3.0"
pyquil = "^4.0.1"
proxy = "^0.0.1"
lazy-object-proxy = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-docstrings = "^1.7.0"
pip-licenses = "^4.0.3"

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.poetry.group.dev.dependencies]
pydot = "^1.4.2"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ["py38"]

[tool.isort]
atomic = true
group_by_package = true
honor_noqa = true
multi_line_output = 3
profile = "black"
reverse_relative = true

[tool.sphinx]
copyright-year = 2023
enable-autodoc = true
enable-autosectionlabel = true
# documentation for myst: <https://myst-parser.readthedocs.io/en/latest>
enable-markdown = "myst"
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]

[tool.sphinx.myst]
# settings documentation: <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
# create anchors for h1 and h2
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image", #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
heading_anchors = 2
# substitutions = {"key": "substitution value"}

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
