[tool.poetry]
authors = ["Arne Bartenbach", "Gabriel Bonnet", "Daniel Georg", "Nora Hengst", "Lukas Januschke", "Maximilian Kuhn",
    "Fadil Furkan Lokman", "Julian Obst", "Christoph Walcher", "Vladimir Yussupov"]
description = "Qunicorn Core for SeQuenC"
license = "Apache-2.0"
name = "qunicorn_core"
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
python = ">=3.11.0, <=3.12"
Flask-Cors = "^4.0.0"
Flask-JWT-Extended = "^4.6.0"
Flask-Migrate = "^4.0.4"
Flask-SQLAlchemy = "^3.0.3"
SQLAlchemy = "^2.0.29"
flask = { extras = ["dotenv"], version = "^3.0.2" }
flask-babel = "^3.0.0"
flask-smorest = "^0.44.0"
tomli = "^2.0.1"
celery = "^5.4.0"
redis = "^5.0.4"
invoke = "^2.0.0"
gunicorn = "^22.0.0"
psycopg = "^3.1.18"
qiskit = "^1.0.0"
qiskit-ibm-runtime = "^0.31.0"
qiskit-aer = "^0.15.1"
qiskit-qasm3-import = "^0.5.0"
amazon-braket-sdk = "^1.78.0"
qrisp = "^0.4.5"
pyquil = "^4.10.0"
# pin urllib3 to qiskit compatible version
urllib3 = "^1.26.19"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.0"
flake8-docstrings = "^1.7.0"
pip-licenses = "^4.4.0"
mocker = "^1.1.1"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-qthelp = "^1.0.6"
sphinxcontrib-applehelp = "^1.0.7"
sphinxcontrib-devhelp = "^1.0.5"
sphinxcontrib-htmlhelp = "^2.0.4"
sphinxcontrib-jquery = "^4.1"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-redoc = "^1.6.0"
sphinxcontrib-serializinghtml = "^1.1.9"
sphinx-click = "^6.0.0"
sphinx = "^7.3.7"
myst-parser = "^3.0.0"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ["py311"]

[tool.isort]
atomic = true
group_by_package = true
honor_noqa = true
multi_line_output = 3
profile = "black"
reverse_relative = true

[tool.sphinx]
copyright-year = 2023
enable-autodoc = true
enable-autosectionlabel = true
# documentation for myst: <https://myst-parser.readthedocs.io/en/latest>
enable-markdown = "myst"
enable-todo = true
enable-graphviz = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true
theme = "sphinx_rtd_theme"

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]

[tool.sphinx.myst]
# settings documentation: <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
# create anchors for h1 and h2
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image", #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
heading_anchors = 2
# substitutions = {"key": "substitution value"}

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
